# WARNING: THE APPID IS CREATED AT BUILD TIME, MAKE SURE IT'S CORRECT
appId: com.swmansion.expo53
---
- startRecording: "button-interactions-expo53"
- launchApp
- tapOn: "• Test console logs and breakpoints"
- tapOn: "• Fetch request visible in network panel"
- tapOn: "• Check uncaught exceptions"
- assertNotVisible: "• Create simulator/emulator"
- stopRecording