# WARNING: THE APPID IS CREATED AT BUILD TIME, MAKE SURE IT'S CORRECT
appId: com.reactnative82
---
- startRecording: "button-interactions-reactnative82"
- launchApp
- tapOn: "• Test console logs and breakpoints"
- tapOn: "• Fetch request visible in network panel"
- tapOn: "• Check uncaught exceptions"
- assertNotVisible: "• Create simulator/emulator"
- stopRecording